--- a/.releaserc.json
+++ b/.releaserc.json
@@ -16,6 +16,7 @@
     "@semantic-release/commit-analyzer",
     "semantic-release-export-data",
     "@semantic-release/release-notes-generator",
+    "@semantic-release/npm",
     [
       "@semantic-release/github"
     ]
