--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "curseforge-fingerprint",
+  "name": "@meza/curseforge-fingerprint",
   "version": "0.0.0",
   "description": "Native binding to the curseforge fingerprinting algorithm",
   "main": "src/index.ts",
