--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "lefthook": "1.2.6",
     "node-gyp": "^9.3.1",
     "npm-run-all": "4.1.5",
+    "npmignore": "^0.3.0",
     "rimraf": "3.0.2",
     "semantic-release": "19.0.5",
     "semantic-release-export-data": "1.0.1",
