--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
   "rules": {
     "dot-notation": "error",
     "@typescript-eslint/dot-notation": "error",
+    "@typescript-eslint/no-var-requires": "off",
     "no-console": "off",
     "no-warning-comments": "warn",
     "no-unused-vars": "off",
