--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   },
   "exports": {
     ".": {
-      "types": "dist/types/index.d.ts",
-      "require": "dist/cjs/index.js",
-      "import": "dist/esm/index.js"
+      "types": "./dist/types/index.d.ts",
+      "require": "./dist/cjs/index.js",
+      "import": "./dist/esm/index.js"
     }
   },
   "repository": {
