--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
   "dependencies": {
     "@types/node": "^18.7.23",
     "core-js": "^3.25.3",
-    "node-addon-api": "^5.0.0"
+    "node-addon-api": "^5.0.0",
+    "copyfiles": "^2.4.1"
   },
   "commitlint": {
     "extends": [
@@ -81,7 +82,6 @@
     "@types/uuid": "9.0.0",
     "@typescript-eslint/eslint-plugin": "5.48.1",
     "@typescript-eslint/parser": "5.48.1",
-    "copyfiles": "^2.4.1",
     "eslint": "8.31.0",
     "eslint-config-tailored-tunes": "5.0.2",
     "eslint-plugin-json": "3.1.0",
