--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "@types/node": "^18.7.23",
     "core-js": "^3.25.3",
     "node-addon-api": "^5.0.0",
-    "copyfiles": "^2.4.1"
+    "copyfiles": "^2.4.1",
+    "node-gyp": "^9.3.1",
+    "typescript": "4.9.4"
   },
   "commitlint": {
     "extends": [
@@ -88,14 +90,12 @@
     "eslint-plugin-security": "1.6.0",
     "is-ci": "3.0.1",
     "lefthook": "1.2.7",
-    "node-gyp": "^9.3.1",
     "npm-run-all": "4.1.5",
     "npmignore": "^0.3.0",
     "rimraf": "3.0.2",
     "semantic-release": "19.0.5",
     "semantic-release-export-data": "1.0.1",
     "ts-node": "10.9.1",
-    "typescript": "4.9.4",
     "uuid": "9.0.0"
   }
 }
