--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
     "@typescript-eslint"
   ],
   "rules": {
+    "@typescript-eslint/no-var-requires": "off",
     "dot-notation": "error",
     "@typescript-eslint/dot-notation": "error",
     "no-console": "off",
