--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "prepack": "npmignore --auto",
     "prebuild": "node-gyp configure",
     "build": "npm-run-all build:gyp build:ts build:prebuilds",
-    "build:gyp": "node-gyp build --debug && npm run postinstall",
+    "build:gyp": "node-gyp build --debug",
     "build:ts": "tsc --module esnext --outDir dist/esm && tsc --module commonjs --outDir dist/cjs",
     "build:prebuilds": "./prebuild.sh",
     "postbuild": "npm run copy",
