fix: fixed ia32 build dependencies

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     steps:
+      - name: "Install deps"
+        run: sudo apt install -y gcc-multilib g++-multilib
       - uses: actions/checkout@v3
       - name: Set up node
         uses: meza/action-setup-node-npm@main
