fix: added all platforms

--- a/package.json
+++ b/package.json
@@ -33,10 +33,9 @@
     "prepack": "npmignore --auto",
     "prebuild": "node-gyp configure",
     "build": "npm-run-all build:gyp build:ts build:prebuilds",
-    "build:gyp": "node-gyp build --debug",
+    "build:gyp": "node-gyp-build --debug && npm run copy",
     "build:ts": "tsc --module esnext --outDir dist/esm && tsc --module commonjs --outDir dist/cjs",
     "build:prebuilds": "./prebuild.sh",
-    "postbuild": "npm run copy",
     "copy": "copyfiles -f ./build/Release/*.node dist/addon",
     "commit": "cz",
     "ci": "npm-run-all --parallel -c lint",
