--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,18 +7,21 @@ env:
 
 jobs:
   verify:
-    - name: "Install deps"
-      run: sudo apt install -y gcc-multilib g++-multilib
-    - uses: actions/checkout@v3
-    - name: Set up node
-      uses: meza/action-setup-node-npm@main
-      with:
-        node-version: latest
-        cache-name: ${{ needs.verify.outputs.cache-name }}
-    - name: "Build"
-      run: npm run build
-    - name: "Test"
-      run: npm run test
+    runs-on: ubuntu-latest
+    name: Verify
+    steps:
+      - name: "Install deps"
+        run: sudo apt install -y gcc-multilib g++-multilib
+      - uses: actions/checkout@v3
+      - name: Set up node
+        uses: meza/action-setup-node-npm@main
+        with:
+          node-version: latest
+          cache-name: ${{ needs.verify.outputs.cache-name }}
+      - name: "Build"
+        run: npm run build
+      - name: "Test"
+        run: npm run test
   build:
     runs-on: [windows-latest, ubuntu-latest, macos-latest]
     needs: [ verify ]
