--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,13 @@ jobs:
         junit-report-path: "reports/junit.xml"
         cobertura-report-path: "reports/coverage/cobertura-coverage.xml"
   build:
-    runs-on: [windows-latest, ubuntu-latest, macos-latest]
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, windows-latest, macos-latest ]
+    runs-on: ${{ matrix.os }}
     needs: [ verify ]
     if: needs.verify.outputs.new-release-published == 'true'
-    name: Build binaries for ${{ matrix.runs-on }}
+    name: Build binaries for ${{ matrix.os }}
     steps:
       - name: "Install deps"
         run: sudo apt install -y gcc-multilib g++-multilib
