fix: added version bump to the file builds

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,8 @@ jobs:
         with:
           node-version: latest
           cache-name: ${{ needs.verify.outputs.cache-name }}
+      - name: Set version
+        run: npm version ${{ needs.verify.outputs.new-version }}
       - name: "Build"
         run: npm run build
       - name: "Test"
