--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,14 +31,27 @@ jobs:
         with:
           node-version: 16.16.0
           cache-name: ${{ needs.verify.outputs.cache-name }}
+      - name: Use Python 3.10
+        uses: actions/setup-python@v3
+        with:
+          python-version: 3.10
+        env:
+          PYTHON_VERSION: 3.10
+      - name: Set Windows environment
+        if: matrix.os == 'windows-latest'
+        run: |
+          echo 'GYP_MSVS_VERSION=2015' >> $Env:GITHUB_ENV
+          echo 'GYP_MSVS_OVERRIDE_PATH=C:\\Dummy' >> $Env:GITHUB_ENV
       - name: Set version
         run: npm version --no-git-tag-version ${{ needs.verify.outputs.new-release-version }}
       - name: "Build"
         run: npm run build && npm run build:prebuilds
       - name: "Test"
         run: npm run test
-      - name: "Upload binaries"
-        run: npm run upload ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/upload-artifact@master
+        with:
+          name: prebuilds-${{ matrix.os }}
+          path: prebuilds
   release:
     needs: [ verify, build ]
     if: needs.verify.outputs.new-release-published == 'true'
@@ -53,6 +66,18 @@ jobs:
           cache-name: ${{ needs.verify.outputs.cache-name }}
       - name: "Build"
         run: npm run build
+      - uses: actions/download-artifact@master
+        with:
+          name: prebuilds-windows-latest
+          path: prebuilds
+      - uses: actions/download-artifact@master
+        with:
+          name: prebuilds-ubuntu-latest
+          path: prebuilds
+      - uses: actions/download-artifact@master
+        with:
+          name: prebuilds-macos-latest
+          path: prebuilds
       - name: 🚀 Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
