--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Set version
         run: npm version --no-git-tag-version ${{ needs.verify.outputs.new-release-version }}
       - name: "Build"
-        run: npm run build && npm run build:prebuilds
+        run: npm run build && npm run prebuilds
       - name: "Test"
         run: npm run test
       - uses: actions/upload-artifact@master
