--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Set up node
         uses: meza/action-setup-node-npm@main
         with:
-          node-version: 16.16.0
+          node-version: latest
           cache-name: ${{ needs.verify.outputs.cache-name }}
       - name: Set Windows environment
         if: matrix.os == 'windows-latest'
@@ -62,7 +62,7 @@ jobs:
       - name: Set up node
         uses: meza/action-setup-node-npm@main
         with:
-          node-version: 16.16.0
+          node-version: latest
           cache-name: ${{ needs.verify.outputs.cache-name }}
       - name: "Build"
         run: npm run build
