--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,3 @@
 {
-  "extends": "@meza/tsconfig-base",
-  "compilerOptions": {
-    "declaration": true,
-    "tsBuildInfoFile": ".cache/.tsbuildinfo",
-    "incremental": true,
-    "target": "ES6",
-    "module": "commonjs",
-    "moduleResolution": "nodenext",
-    "emitDeclarationOnly": false,
-    "skipDefaultLibCheck": true,
-    "skipLibCheck": true,
-    "outDir": "./dist/esm",
-    "isolatedModules": true,
-    "sourceRoot": "src",
-    "noPropertyAccessFromIndexSignature": false,
-    "typeRoots": [
-      "./node_modules/@types",
-      "./src/types"
-    ]
-  },
-  "include": [
-    "src/**/*.ts",
-    "test/**/*.ts"
-  ],
-  "exclude": [
-    "dist",
-    "node_modules"
-  ],
-  "ts-node": {
-    "files": true
-  }
+  "extends": "./tsconfig.mjs.json"
 }
