--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,8 +8,8 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": "latest",
-    "project": "./tsconfig.cjs.json"
+    "ecmaVersion": 2022,
+    "project": "./tsconfig.json"
   },
   "plugins": [
     "json",
@@ -35,7 +35,7 @@
     ]
   },
   "env": {
-    "commonjs": true,
+    "commonjs": false,
     "es6": true,
     "node": true
   },
