--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,9 +29,7 @@ jobs:
       - name: Use Python 3.10.6
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10.6'
-        env:
-          PYTHON_VERSION: '3.10.6'
+          python-version: '>=3.10.6'
       - name: Set up node
         uses: meza/action-setup-node-npm@main
         with:
