--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,29 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base"
-  ],
-  "enabledManagers": [
-    "npm"
-  ],
-  "baseBranches": [
-    "main"
-  ],
-  "semanticCommits": "enabled",
-  "semanticCommitType": "chore",
-  "packageRules": [
-    {
-      "matchUpdateTypes": [
-        "minor",
-        "patch",
-        "pin",
-        "digest"
-      ],
-      "automerge": true
-    }
-  ],
-  "schedule": [
-    "after 10pm and before 5am every weekday",
-    "every weekend"
-  ]
+  "extends": ["github>stateshifters/renovate-common"],
+  "prConcurrentLimit": 1,
+  "enabledManagers": ["npm", "github-actions"]
 }
