--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Set up node
         uses: meza/action-setup-node-npm@main
         with:
-          node-version: latest
+          node-version: lts/*
           cache-name: ${{ needs.verify.outputs.cache-name }}
       - name: Set Windows environment
         if: matrix.os == 'windows-latest'
