--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '>=3.10.6'
+      - name: Install dependencies
+        run: python3 -m pip install setuptools
       - name: Set up node
         uses: meza/action-setup-node-npm@main
         with:
