--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Set up node
         uses: meza/action-setup-node-npm@main
         with:
-          node-version: lts/*
+          node-version: 20.5.0
           cache-name: ${{ needs.verify.outputs.cache-name }}
       - name: Set Windows environment
         if: matrix.os == 'windows-latest'
